chore(Cargo.toml): change license from GPL to MIT for broader compatibility and adoption

--- a/ercin/Cargo.toml
+++ b/ercin/Cargo.toml
@@ -3,7 +3,7 @@ name = "ercin"
 version = "7.7.7"
 edition = "2021"
 description = "Ercin Dedeoglu"
-license = "GPL"
+license = "MIT"
 authors = ["Ercin Dedeoglu <e.dedeoglu@gmail.com>"]
 repository = "https://github.com/ercindedeoglu/ercin"
 homepage = "https://ercin.info"
